Finaliza estilizacao do header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <header>
       <a href="index.html" class="logo" title="Voltar para a página inicial">
         <img
+        class="img-mobile"
           src="img/bussola-jornada-branco.png"
-          alt="Bussula do logo Jornada Viagens na cor preta"
+          alt="Bussula do logo Jornada Viagens na cor branca"
+        />
+        <img
+          class="img-desktop"
+          src="img/bussola-jornada-texto-branco.png"
+          alt="Logo Jornada Viagens na cor branca"
         />
       </a>
       <div class="navigation-menu">
