--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </header>
     <section class="hero">
-      <img src="img/hero-mobile.png" alt="" />
+      <div class="hero-img"></div>
       <h2>
         Somos uma agência apaixonada por criar viagens inesquecíveis. Do destino
         à seleção das atividades, cuidamos de todos os detalhes para que você
