--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
       <div class="section-title">
         <h2>Ofertas da semana</h2>
         <hr />
+        <section class="offers-card">
+          <article class="card">
+            <header>
+              <p>HOTEL+AÉREO</p>
+              <h3>
+                Japão <br />
+                <span>R$ 4000</span>
+              </h3>
+            </header>
+            <section></section>
+            <footer>
+              <a href="#" class="button">Ver detalhes</a>
+            </footer>
+          </article>
+        </section>
       </div>
     </section>
   </body>
