--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <div class="section-title">
         <h2>Ofertas da semana</h2>
         <hr />
-        <section class="offers-card">
-          <article class="card">
+        <section class="offers-cards">
+          <article class="card japao">
             <header>
               <p>HOTEL+AÉREO</p>
               <h3>
@@ -69,7 +69,42 @@
                 <span>R$ 4000</span>
               </h3>
             </header>
-            <section></section>
+            <footer>
+              <a href="#" class="button">Ver detalhes</a>
+            </footer>
+          </article>
+          <article class="card san-andreas">
+            <header>
+              <p>HOTEL+AÉREO</p>
+              <h3>
+                San Andreas <br />
+                <span>R$ 3000</span>
+              </h3>
+            </header>
+            <footer>
+              <a href="#" class="button">Ver detalhes</a>
+            </footer>
+          </article>
+          <article class="card paraiba">
+            <header>
+              <p>HOTEL+AÉREO</p>
+              <h3>
+                Paraíba <br />
+                <span>R$ 1200</span>
+              </h3>
+            </header>
+            <footer>
+              <a href="#" class="button">Ver detalhes</a>
+            </footer>
+          </article>
+          <article class="card manaus">
+            <header>
+              <p>HOTEL+AÉREO</p>
+              <h3>
+                Manaus <br />
+                <span>R$ 1600</span>
+              </h3>
+            </header>
             <footer>
               <a href="#" class="button">Ver detalhes</a>
             </footer>
